# vscode-wolfram

./: .gitignore  .vscodeignore  CHANGELOG.md  CMakeLists.txt  HowToBuild.md  LICENSE  README.md  language-configuration.json  package-lock.json  package-lock.json.in  package.json  package.json.in  test.m  tsconfig.json  vsc-extension-quickstart.md  webpack.config.js  wolfram.language-configuration.json
Docs/: compatibility.md  configuration-details.md  themes.md
VSCodeWolfram/: PacletInfo.wl
VSCodeWolfram/Documentation/English/Guides/: VSCodeWolfram.nb
VSCodeWolfram/Documentation/English/Tutorials/: ReleaseNotes.nb
WolframLanguageSyntax/Data/: BadSymbols.wl  BuiltInFunctions.wl  BuiltinFunctions.wl  Constants.wl  ExperimentalSymbols.wl  FreeCharacters.wl  FreeLongNames.wl  ObsoleteSymbols.wl  SessionSymbols.wl  SpecialCharacters.wl  SpecialLongNames.wl  SystemCharacters.wl  SystemLongNames.wl  UndocumentedCharacters.wl  UndocumentedLongNames.wl  UndocumentedSymbols.wl  UnsupportedCharacters.wl  UnsupportedLongNames.wl
client/: package-lock.json  package.json
client/src/: extension.ts
cmake/: InstallVSIX.cmake  PackageJSON.cmake  ReplacePackageJSON.cmake  ReplaceREADME.cmake  SetPackageVersion.wl
docs/: release-notes.txt
extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json.in  package.json.in
extension/src/: extension.ts
extension/syntaxes/: wolfram.tmLanguage.json
extension/themes/: brenton-wl-color-theme.json  brenton-wl-light-color-theme.json  brenton-wl-theme.json
resources/: init.wl  render-html.wl
scripts/: build  build.bat  re_build.xml
src/: extension.ts  tsconfig-base.json
src/client/: index.ts
src/extension/: controller.ts  extension.ts  find-kernel.ts  notebook-config.ts  notebook-kernel.ts  serializer.ts  tsconfig.json
src/test/: runTest.js.map
src/test/suite/: extension.test.js  extension.test.js.map  index.js  index.js.map
syntaxes/: wolfram.tmLanguage.json
themes/: brenton-wl-theme.json  wolfram-Default.json  wolfram-dark-rainbow.json  wolfram-dark.json  wolfram-light.json
